--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,7 +1,19 @@
-<nav>
-  <ul>
-     <li><a href="#">Home Stuff</a></li>
-     <li><a href="#">About</a></li>
-     <li><a href="#">Contact</a></li>
-   </ul>
+<link rel="stylesheet" href="css/navbar.css">
+</link>
+<nav class="main-nav navbar navbar-expand-lg .navbar-dark bg-dark sticky-top">
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <a class="navbar-brand" href="#">
+      <img src="img/common-assets/Lucid-Software-Logo.png"></img>
+    </a>
+    <ul class="navbar-nav">
+      <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Agenda</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Locations</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Travel</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">FAQs</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">AMAs</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Trivia</a></li>
+    </ul>
+  </div>
 </nav>
