Changed to navbar bootstrap css - Fixed an incorrect dark theme class - Aligned items on the right - rescaled logo

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,19 +1,24 @@
 <link rel="stylesheet" href="css/navbar.css">
 </link>
-<nav class="main-nav navbar navbar-expand-lg .navbar-dark bg-dark sticky-top">
-  <div class="collapse navbar-collapse" id="navbarNav">
+<nav class="main-nav navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+  <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="img/common-assets/Lucid-Software-Logo.png"></img>
+      <img class="lucid-nav-logo" src="img/common-assets/Lucid-Software-Logo.png"></img>
     </a>
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Agenda</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Locations</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Travel</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">FAQs</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">AMAs</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Trivia</a></li>
-    </ul>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto w-100 justify-content-end">
+        <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Agenda</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Locations</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Travel</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">FAQs</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">AMAs</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Trivia</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
