Fixed Navbar issues - mobile responsive view fixed - Added 2021 product summit to the title

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -16,5 +16,6 @@ $dark: #000;
 @import "../node_modules/bootstrap/scss/grid";
 @import "../node_modules/bootstrap/scss/nav";
 @import "../node_modules/bootstrap/scss/navbar";
+@import "../node_modules/bootstrap/scss/transitions";
 @import "../node_modules/bootstrap/scss/utilities";
 @import "../node_modules/bootstrap/scss/utilities/api";
