--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,14 +1,3 @@
-.main-nav ul {
-
-}
-
-.main-nav li a {
-
-}
-
-.main-nav li a:hover {
-
-}
 
 .main-nav {
   background-color: black;
@@ -17,4 +6,9 @@
 .lucid-nav-logo {
   width: 121px;
   height: 48px;
+}
+
+.nav-title::before {
+  content: "|";
+  margin-right: 10px;
 }
