--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -4,13 +4,14 @@
   <div class="container">
     <a class="navbar-brand" href="#">
       <img class="lucid-nav-logo" src="img/common-assets/Lucid-Software-Logo.png"></img>
+      <span class="nav-title">2021 Product Summit</span>
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Agenda</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Locations</a></li>
