--- a/css/custom.scss
+++ b/css/custom.scss
@@ -19,3 +19,22 @@ $dark: #000;
 @import "../node_modules/bootstrap/scss/transitions";
 @import "../node_modules/bootstrap/scss/utilities";
 @import "../node_modules/bootstrap/scss/utilities/api";
+
+.page-title {
+  color: white;
+}
+
+.page-header {
+  height: 300px;
+  background-origin: padding-box;
+  background-color: #000;
+  background-clip: padding-box;
+  background-position: center;
+  background-size: auto;
+  display: flex;
+  align-items: center;
+}
+
+#agenda-header {
+  background-image: url("/img/page-headers/agenda.png");
+}
