--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Agenda</a></li>
+        <li class="nav-item"><a class="nav-link" href="/agenda.html">Agenda</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Locations</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Travel</a></li>
