Added page links to navbar

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -11,14 +11,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link active" href="/index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="/agenda.html">Agenda</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Locations</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Travel</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">FAQs</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">AMAs</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Trivia</a></li>
+        <li class="nav-item"><a class="nav-link" href="/speakers.html">Speakers</a></li>
+        <li class="nav-item"><a class="nav-link" href="/locations.html">Locations</a></li>
+        <li class="nav-item"><a class="nav-link" href="/travel.html">Travel</a></li>
+        <li class="nav-item"><a class="nav-link" href="/faqs.html">FAQs</a></li>
+        <li class="nav-item"><a class="nav-link" href="/amas.html">AMAs</a></li>
+        <li class="nav-item"><a class="nav-link" href="/trivia.html">Trivia</a></li>
       </ul>
     </div>
   </div>
