--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -11,15 +11,23 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="/index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/agenda.html">Agenda</a></li>
-        <li class="nav-item"><a class="nav-link" href="/speakers.html">Speakers</a></li>
-        <li class="nav-item"><a class="nav-link" href="/locations.html">Locations</a></li>
-        <li class="nav-item"><a class="nav-link" href="/travel.html">Travel</a></li>
-        <li class="nav-item"><a class="nav-link" href="/faqs.html">FAQs</a></li>
-        <li class="nav-item"><a class="nav-link" href="/amas.html">AMAs</a></li>
-        <li class="nav-item"><a class="nav-link" href="/trivia.html">Trivia</a></li>
+        <li class="nav-item"><a class="nav-link" id="home" href="/index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" id="agenda" href="/agenda.html">Agenda</a></li>
+        <li class="nav-item"><a class="nav-link" id="speakers" href="/speakers.html">Speakers</a></li>
+        <li class="nav-item"><a class="nav-link" id="locations" href="/locations.html">Locations</a></li>
+        <li class="nav-item"><a class="nav-link" id="travel" href="/travel.html">Travel</a></li>
+        <li class="nav-item"><a class="nav-link" id="faqs" href="/faqs.html">FAQs</a></li>
+        <li class="nav-item"><a class="nav-link" id="amas" href="/amas.html">AMAs</a></li>
+        <li class="nav-item"><a class="nav-link" id="trivia" href="/trivia.html">Trivia</a></li>
       </ul>
     </div>
   </div>
 </nav>
+
+<script type="text/javascript">
+  var page = "{{ page }}";
+  link = document.getElementById(page);
+  if (link) {
+    link.classList.add("active");
+  }
+</script>
