--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,9 +1,10 @@
 <link rel="stylesheet" href="css/navbar.css">
 </link>
-<nav class="main-nav navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+<nav class="main-nav navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" href="#">
       <img class="lucid-nav-logo" src="img/common-assets/Lucid-Software-Logo.png"></img>
+      <div class="verticle-divider"></div>
       <span class="nav-title">2021 Product Summit</span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
