--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ h3 {
 }
 
 h4 {
-  font-size: 2.5rem;
+  font-size: 2.2rem;
 }
 
 h5 {
@@ -147,9 +147,14 @@ h6 {
 /* Custom Typography */
 /* Landing Page */
 
-.hero h2 {
-  font-size: 4.5rem;
-  line-height: 5rem;
+.hero-container {
+  padding: 12rem 0rem 6rem 0rem;
+}
+
+.hero-headline h2 {
+  font-size: 4.2rem;
+  line-height: 6rem;
+  color: white;
 }
 
 .hero-headline h2 > span {
@@ -158,12 +163,66 @@ h6 {
   line-height: 2rem;
 }
 
+.hero-subheadline h4 {
+  padding: 4rem 0 1rem 0;
+  color: white;
+  max-width: 70%;
+}
 
 .hero-subheadline h5 {
   color: var(--secondary-text-color);
   line-height: 0.2rem;
 }
 
+.hero-bg-image {
+  background-image: url(/img/page-headers/hero-home.png);
+  min-height: fit-content;
+
+    background-size: cover;
+}
+
+.homepage-card-outline {
+  padding: 1rem;
+  border-radius: 2rem;
+  border: 0.15rem solid rgba(255, 255, 255, 0.3);
+}
+
+.homepage-card-outline:hover {
+  padding: 1rem;
+  border-radius: 2rem;
+  border: 0.15rem solid #9391FF;
+  transition: border 0.5s ease-in-out;
+}
+
+.homepage-card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.homepage-card-body > .card-title {
+  color: white;
+}
+
+.homepage-card-body > .card-subtitle {
+  color: var(--secondary-text-color);
+}
+
+.card-horizontal {
+  display: flex;
+  flex: 1 1 auto;
+}
+
+.card-image {
+  max-width: 80%;
+}
+
+.quote-card h4{
+  padding: 2rem;
+  color: white;
+  border-radius: 0.5rem;
+  border: 0.15rem solid rgba(255, 255, 255, 0.3);
+}
 
 
 /* ==========================================================================
