Added header image and google form to trivia page

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -37,6 +37,14 @@ $dark: #000;
   align-items: center;
 }
 
+.google-form-container {
+  padding-top: 40px;
+}
+
 #agenda-header {
   background-image: url("/img/page-headers/agenda.png");
+}
+
+#trivia-header {
+  background-image: url("/img/page-headers/trivia.png");
 }
