Added header and google form to AMAs page

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -48,3 +48,7 @@ $dark: #000;
 #trivia-header {
   background-image: url("/img/page-headers/trivia.png");
 }
+
+#amas-header {
+  background-image: url("/img/page-headers/amas.png");
+}
