Added content to locations page. TODO add images.

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -88,3 +88,7 @@ $dark: #000;
 #travel-header {
   background-image: url("/img/page-headers/travel.png");
 }
+
+#locations-header {
+  background-image: url("/img/page-headers/locations.png");
+}
