Updated header background css to better fit the image

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -33,7 +33,7 @@ $dark: #000;
   background-color: #000;
   background-clip: padding-box;
   background-position: center;
-  background-size: auto;
+  background-size: cover;
   display: flex;
   align-items: center;
   margin-top:64px;
