Added headers to agenda and speakers page

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -73,6 +73,10 @@ $dark: #000;
   background-image: url("/img/page-headers/agenda.png");
 }
 
+#speakers-header {
+  background-image: url("/img/page-headers/speakers.png");
+}
+
 #trivia-header {
   background-image: url("/img/page-headers/trivia.png");
 }
