Fixed file names in navbar links

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -17,9 +17,9 @@
         <li class="nav-item"><a class="nav-link" id="speakers" href="/speakers.html">Speakers</a></li>
         <li class="nav-item"><a class="nav-link" id="locations" href="/locations.html">Locations</a></li>
         <li class="nav-item"><a class="nav-link" id="travel" href="/travel.html">Travel</a></li>
-        <li class="nav-item"><a class="nav-link" id="faqs" href="/faqs.html">FAQs</a></li>
-        <li class="nav-item"><a class="nav-link" id="amas" href="/amas.html">AMAs</a></li>
-        <li class="nav-item"><a class="nav-link" id="trivia" href="/trivia.html">Trivia</a></li>
+        <li class="nav-item"><a class="nav-link" id="faqs" href="/FAQs.html">FAQs</a></li>
+        <li class="nav-item"><a class="nav-link" id="amas" href="/AMAs.html">AMAs</a></li>
+        <li class="nav-item"><a class="nav-link" id="trivia" href="/Trivia.html">Trivia</a></li>
       </ul>
     </div>
   </div>
