--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,6 @@ h6 {
 .hero-headline h2 > span {
   color: var(--secondary-text-color);
   display: block;
-  line-height: 2rem;
 }
 
 .hero-subheadline h4 {
@@ -176,9 +175,7 @@ h6 {
 
 .hero-bg-image {
   background-image: url(/img/page-headers/hero-home.png);
-  min-height: fit-content;
-
-    background-size: cover;
+  background-size: cover;
 }
 
 .homepage-card-outline {
@@ -188,8 +185,6 @@ h6 {
 }
 
 .homepage-card-outline:hover {
-  padding: 1rem;
-  border-radius: 2rem;
   border: 0.15rem solid #9391FF;
   transition: border 0.5s ease-in-out;
 }
@@ -198,6 +193,7 @@ h6 {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  padding: 16px;
 }
 
 .homepage-card-body > .card-title {
@@ -208,20 +204,22 @@ h6 {
   color: var(--secondary-text-color);
 }
 
+.homepage-card {
+  background: black;
+  border-radius: 2rem;
+}
+
 .card-horizontal {
-  display: flex;
-  flex: 1 1 auto;
 }
 
 .card-image {
-  max-width: 80%;
+  max-width: 100%;
 }
 
 .quote-card h4{
   padding: 2rem;
-  color: white;
   border-radius: 0.5rem;
-  border: 0.15rem solid rgba(255, 255, 255, 0.3);
+  border: 0.15rem solid rgba(0, 0, 0, 0.3);
 }
 
 .agenda-card {
