Updated Locations Images

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -79,6 +79,8 @@ hr.divider-solid {
 #salt-lake-city-image{
   display: inline-block;
   height: 200px;
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 #embassy-suite-image {
