--- a/css/custom.scss
+++ b/css/custom.scss
@@ -70,6 +70,19 @@ hr.divider-solid {
   background-color: grey;
 }
 
+.button32 {
+  display: inline-block;
+  background: #9391FF;
+  border-radius: 4px;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  font-size: 16px;
+  font-weight: 700;
+  color: white;
+  padding: 12px 16px;
+}
+
 #lookbackCarousel {
   border-radius: 8px;
   overflow: hidden;
