Added Day 1 and Day 2 tabs to agenda

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -3,6 +3,7 @@
 
 //Place to override bootstrap variables
 $dark: #000;
+$primary: #9391FF;
 
 // Bootstrap required files
 @import "../node_modules/bootstrap/scss/variables";
