--- a/css/custom.scss
+++ b/css/custom.scss
@@ -80,8 +80,8 @@ hr.divider-solid {
   background-image: url('/img/common-assets/break-cat.png');
   background-repeat: no-repeat;
   background-origin: content-box;
-  background-position: center;
-  background-size: auto;
+  background-position: right;
+  background-size: 25%;
 }
 
 .button32 {
@@ -91,6 +91,19 @@ hr.divider-solid {
   text-align: center;
   text-decoration: none;
   border: none;
+  font-size: 16px;
+  font-weight: 700;
+  color: white;
+  padding: 12px 16px;
+}
+
+.button32outline {
+  display: inline-block;
+  background: none;
+  border: 1px solid $primary;
+  border-radius: 4px;
+  text-align: center;
+  text-decoration: none;
   font-size: 16px;
   font-weight: 700;
   color: white;
